# UrlShortener

./: CMakeLists.txt
html/: index.html  shorten.html
src/: config.h  defaults.h  generator.cpp  generator.hpp  main.cpp  page.cpp  page.hpp
